Fix: fixed button spacing and changed primary color

--- a/src/header/style.css
+++ b/src/header/style.css
@@ -1,11 +1,10 @@
 .site__header {
-    top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+background-color: var(--bg-color);
 }
 
 .menu__button {
     color: var(--text-color);
+    background-color: transparent;
 }
 
 .menu__button:focus,
@@ -25,7 +24,7 @@
     padding: 5px 15px;
     margin: 0;
     border: unset;
-    background: var(--primary-color);
+    /* background: var(--primary-color); */
     font-size: 1.25rem;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--text-color-2);
