--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
     overflow-x: hidden;
-    --bg-color: #0c0c0c;
+    --bg-color: #1b1b1b;
     --primary-color: #0d0d0d;
     --secondary-color: #fff;
     --text-color: #fff;
@@ -35,8 +35,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     padding-top: 60px;
-    border-left: 10px solid var(--primary-color);
-    border-right: 10px solid var(--primary-color);
+    /* border-left: 10px solid var(--primary-color); */
+    /* border-right: 10px solid var(--primary-color); */
 }
 
 ul {
